crates/zakura-rpc/src/methods/tests/snapshots/get_network_info_tachyon@mainnet_10.snap
---
source: crates/zakura-rpc/src/methods/tests/snapshot.rs
expression: get_network_info
---
{
  "version": 100,
  "subversion": "RPC test",
  "protocolversion": 170210,
  "localservices": "0000000000000001",
  "timeoffset": 0,
  "connections": 1,
  "networks": [
    {
      "name": "ipv4",
      "limited": false,
      "reachable": true,
      "proxy": "",
      "proxy_randomize_credentials": false
    },
    {
      "name": "ipv6",
      "limited": false,
      "reachable": true,
      "proxy": "",
      "proxy_randomize_credentials": false
    },
    {
      "name": "onion",
      "limited": false,
      "reachable": false,
      "proxy": "",
      "proxy_randomize_credentials": false
    }
  ],
  "relayfee": 0.000001,
  "localaddresses": [],
  "warnings": ""
}
