crates/zakura-rpc/src/methods/tests/snapshots/get_standard_fee@testnet_10.snap
---
source: crates/zakura-rpc/src/methods/tests/snapshot.rs
expression: get_standard_fee
---
{
  "standard_fee": 400,
  "version": 0
}
