crates/zakura-rpc/src/methods/tests/snapshots/getrawtransaction_unknown_txid@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: rsp
snapshot_kind: text
---
{
  "Err": {
    "code": -5,
    "message": "Transaction not found in mempool or best chain"
  }
}
