crates/zakura-rpc/src/methods/tests/snapshots/z_get_treestate_empty_Sapling_treestate@custom_testnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: treestate
---
{
  "hash": "00f1a49e54553ac3ef735f2eb1d8247c9a87c22a47dbd7823ae70adcd6c21a18",
  "height": 2,
  "time": 1477676169,
  "sapling": {
    "commitments": {
      "finalRoot": "3e49b5f954aa9d3545bc6c37744661eea48d7c34e3000d82b7f0010c30f4c2fb",
      "finalState": "000000"
    }
  },
  "orchard": {
    "commitments": {}
  },
  "ironwood": {
    "commitments": {}
  }
}
